Finish the implementation
  * Kill your darlings
  * Clean up and test the implementation
  * Add metrics